Backport for java17.